# AVM-AI-Solutions

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
awwwards-site/: pnpm-lock.yaml
backend/: main.py
backend/api_routes/: chatbot_routes.py
backend/chatbot/: chatbot_core.py  llm.py  sys_prompt.py
backend/models/: chatbot_models.py
frontend/: package.json  replit.md  tailwind.config.ts
frontend/.local/state/replit/agent/design_reference/58b0a823-b14c-4363-b617-942ac7effeb7/: 54f7473f-4e49-4f4a-a0e1-e44b6ee4245c.html
frontend/attached_assets/: Pasted-Build-a-professional-modern-and-responsive-website-for-a-company-that-provides-end-to-end-AI-solut-1756216169294_1756216169296.txt
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: Footer.tsx  Navigation.tsx
frontend/client/src/components/ui/: form.tsx
frontend/client/src/pages/: About.tsx  Blog.tsx  Brochure.tsx  Consultation.tsx  Home.tsx  Services.tsx
frontend/server/: routes.ts
frontend/shared/: schema.ts
